# Alicia-D-SDK

./: .gitignore  ALT_FIRMWARE_FIXES.md  ARCHITECTURE_V5.6.0.md  README.md  README_EN.md  README_V5.6.0.md  REFACTOR_SUMMARY.md  VLA_TRAINING_GUIDE.md  pyproject.toml  record_replay.py  requirements.txt  requirements_v5.6.0.txt  setup.py  setup_v5.6.0.py  test_speed.py
alicia_d_sdk/: __init__.py
alicia_d_sdk/api/: __init__.py  synria_robot_api.py
alicia_d_sdk/config/: lqt.yaml
alicia_d_sdk/controller/: __init__.py  control_api.py  drag_teaching_controller.py  motion_session.py  online_interpolator.py  session_factory.py
alicia_d_sdk/driver/: __init__.py  serial_comm.py  servo_driver.py
alicia_d_sdk/execution/: __init__.py  data_collector.py  drag_teaching.py  hardware_executor.py  sparkvis.py  trajectory_executor.py
alicia_d_sdk/hardware/: __init__.py  data_parser.py  serial_comm.py  servo_driver.py  test.py
alicia_d_sdk/hardware_v60/: __init__.py  serial_comm.py
alicia_d_sdk/kinematics/: __init__.py  advanced_ik_solver.py  ik_controller.py  robot_model.py
alicia_d_sdk/planning/: __init__.py  planner_registry.py
alicia_d_sdk/utils/: __init__.py  calculate.py  config.py  fps_utils.py  trajectory_utils.py
alicia_d_sdk_v5.6.0/: __init__.py
alicia_d_sdk_v5.6.0/api/: synria_robot_api.py
alicia_d_sdk_v5.6.0/control/: __init__.py  motion_controller.py  state_manager.py
alicia_d_sdk_v5.6.0/execution/: __init__.py  hardware_executor.py
alicia_d_sdk_v5.6.0/hardware/: __init__.py  data_parser.py  serial_comm.py  servo_driver.py
alicia_d_sdk_v5.6.0/kinematics/: ik_controller.py
alicia_d_sdk_v5.6.0/planning/: __init__.py  cartesian_space_planner.py  joint_space_planner.py  online_interpolator.py  trajectory_planner.py
alicia_duo_sdk/controller/: drag_teaching_controller.py
alicia_duo_sdk/driver/: data_parser.py  serial_comm.py  (+1 more)
docs/: api_reference.md  api_reference_en.md  examples.md  examples_en.md  installation.md  installation_en.md  logger_levels.md  migration_guide.md  migration_guide_en.md
examples/: 00_demo_read_version.py  01_demo_zero_calibration.py  01_torque_switch.py  02_demo_set_new_zero.py  02_demo_torque_control.py  02_demo_zero_calibration.py  03_demo_gripper.py  03_demo_read_state.py  04_demo_move_gripper.py  04_demo_read_state.py  05_demo_moveJ.py  05_demo_move_joint.py  06_demo_forward_kinematics.py  06_demo_moveCartesian.py  06_demo_move_cartesian.py  07_demo_forward_kinematics.py  07_demo_inverse_kinematics.py  07_demo_record_motion.py  08_demo_drag_teaching.py  08_demo_inverse_kinematics.py  08_demo_recorded_motion_replay.py  09_demo_drag_teaching.py  09_demo_joint_traj.py  09_demo_sparkvis.py  10_demo_cartesian_traj.py  10_demo_drag_teaching.py  10_demo_sparkvis.py  11_benchmark_read_joints.py  11_demo_joint_traj.py  11_demo_read_dual_arm.py  11_demo_sparkvis.py  12_benchmark_read_joints.py  12_demo_cartesian_traj.py  12_utmostFPS.py  13_benchmark_read_joints.py  13_utmostFPS.py  collect_data.py  data_capture.py  demo_smooth_move.py  replay_episode.py  (+2 more)
examples_v5.6.0/: 01_basic_usage.py  02_advanced_control.py  03_architecture_demo.py
scripts/: convert_to_lerobot.py
(+17 files in other folders)
